--- a/krishnakumar_cn/web/index.html
+++ b/krishnakumar_cn/web/index.html
@@ -15,18 +15,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Krishnakumar CN">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="krishnakumar_cn">
+  <meta name="apple-mobile-web-app-title" content="krishnakumarcn">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>krishnakumar_cn</title>
+  <title>krishnakumarcn</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
