--- a/krishnakumar_cn/web/index.html
+++ b/krishnakumar_cn/web/index.html
@@ -28,11 +28,16 @@
 
   <title>krishnakumarcn</title>
   <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+
+  <img src="icons/k.png" class="center" />
+  <!—- Other Body Properties —->
+
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
